--- a/index.html
+++ b/index.html
@@ -470,7 +470,9 @@
     </div>
     <!-- get in touch end  -->
 
-    
+    <div class="d">
+        <h1 style="color: black;">hello sir baby kya kar rhi ho  hello bro</h1>
+    </div>
 
 
     <!-- footer start  -->
